# bare-daemon

./: .gitignore  CMakeLists.txt  README.md  binding.c  index.js  package.json  test.js
test/fixtures/: cwd.js  sleep.js
